# TheiaMetrics

./: .dashboard_config  .gitignore  CMakeLists.txt  README.md
include/: dashboard.h  heatmap.h  metrics.h
scripts/: batch_eval.sh  compare.sh  compress.sh  generate_report.py  launch_dashboard.sh  launch_interactive.sh
src/: dashboard.cpp  heatmap.cpp  main.cpp  main_dashboard.cpp  metrics.cpp
